# empty-qt-cmake

./: CMakeLists.txt  main.cpp
